<resources>
    <string name="app_name">EncuestasMexicoAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_formularios">Formularios</string>
    <string name="menu_listas">Listas</string>
    <string name="menu_Resultados">Resultados</string>
    <string name="menu_logout">Cerrar Sesión</string>

    <string name="new_user_Title">Registro de Usuario</string>
    <string name="new_user_Nombre">Nombre Completo *</string>
    <string name="new_user_direccion">Dirección</string>
    <string name="new_user_correo">Correo Electrónico *</string>
    <string name="new_user_password">Contraseña *</string>
    <string name="new_user_type">Tipo de Usuario *</string>
    <string name="user_type_encuestador">Encuestador</string>
    <string name="user_type_admin">Administrador</string>
    <string name="new_user_status">Estatus de Usuario *</string>
    <string name="new_user_status_activo">Activo</string>
    <string name="new_user_status_inactivo">Inactivo</string>

    <string name="form_general_title">Información General</string>
    <string name="form_general_nombre">Nombre del Formulario *</string>
    <string name="form_general_descripcion">Descripción *</string>
    <string name="form_general_inicio">Fecha inicio *</string>
    <string name="form_general_fin">Fecha fin *</string>

    <string name="btn_guardar">Guardar</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="btn_siguiente">Siguiente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>