<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.encuestasmexicoandroid.ui.home.HomeFragment"
        android:label="@string/menu_usuarios"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.encuestasmexicoandroid.ui.gallery.GalleryFragment"
        android:label="@string/menu_formularios"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.encuestasmexicoandroid.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_listas"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_resultados"
        android:name="com.example.encuestasmexicoandroid.ui.resultados.ResultadosFragment"
        android:label="@string/menu_Resultados"
        tools:layout="@layout/fragment_resultados" />
</navigation>