<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ScrollingFragmentNewUser"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:text="@string/new_user_Title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="6dp"
            android:paddingLeft="9dp"
            android:text="@string/new_user_Nombre"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <EditText
            android:id="@+id/editTextNombreCompleto"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_margin="5dp"
            android:padding="16dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="6dp"
            android:paddingLeft="9dp"
            android:text="@string/new_user_direccion"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <EditText
            android:id="@+id/editTextDireccion"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:layout_margin="5dp"
            android:padding="16dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="6dp"
            android:paddingLeft="9dp"
            android:text="@string/new_user_correo"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <EditText
            android:id="@+id/editTextCorreoElectronico"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_margin="5dp"
            android:padding="16dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="6dp"
            android:paddingLeft="9dp"
            android:text="@string/new_user_password"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_margin="5dp"
            android:padding="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="6dp"
            android:paddingLeft="9dp"
            android:text="@string/new_user_type"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
        <ToggleButton
            android:id="@+id/tgBtnType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/user_type_admin"
            android:textOff="@string/user_type_encuestador"
            android:layout_margin="3dp"
            android:padding="6dp"
            android:paddingLeft="9dp"
            tools:ignore="OnClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="6dp"
            android:paddingLeft="9dp"
            android:text="@string/new_user_status"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
        <ToggleButton
            android:id="@+id/userStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/new_user_status_activo"
            android:textOff="@string/new_user_status_inactivo"
            android:layout_margin="3dp"
            android:padding="6dp"
            android:paddingLeft="9dp"
            tools:ignore="OnClick" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="114dp"
                android:layout_height="43dp"
                android:background="@drawable/rounded_button"
                android:minWidth="114dp"
                android:minHeight="43dp"
                android:text="@string/btn_guardar"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                android:translationX="85dp" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="114dp"
                android:layout_height="43dp"
                android:background="@drawable/rounded_button1"
                android:text="@string/btn_Cancelar"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                android:translationX="90dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>