<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ScrollingFragmentNewUser">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:gravity="center"
        android:text="@string/new_user_Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="6dp"
        android:paddingLeft="9dp"
        android:text="@string/new_user_Nombre"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <EditText
        android:id="@+id/editTextNombreCompleto"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:padding="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="6dp"
        android:paddingLeft="9dp"
        android:text="@string/new_user_direccion"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <EditText
        android:id="@+id/editTextDireccion"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:layout_margin="5dp"
        android:padding="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="6dp"
        android:paddingLeft="9dp"
        android:text="@string/new_user_correo"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <EditText
        android:id="@+id/editTextCorreoElectronico"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"
        android:padding="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="6dp"
        android:paddingLeft="9dp"
        android:text="@string/new_user_password"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        android:padding="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="6dp"
        android:paddingLeft="9dp"
        android:text="@string/new_user_type"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <EditText
        android:id="@+id/editTextType"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:padding="16dp"
        />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <Button
          android:layout_width="143dp"
          android:layout_height="43dp"
          android:background="@drawable/round_button_guardar"
          android:text="@string/btn_guardar"
          android:textColor="#FFFFFF"
          android:textSize="18sp"
          android:textStyle="bold"
          android:translationX="65dp" />

      <Button
          android:layout_width="143dp"
          android:layout_height="43dp"
          android:background="@drawable/round_button_cancelar"
          android:text="@string/btn_Cancelar"
          android:textColor="#FFFFFF"
          android:textSize="18sp"
          android:textStyle="bold"
          android:translationX="70dp" />

  </LinearLayout>

</LinearLayout>

</androidx.core.widget.NestedScrollView>